[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/GolfDisk.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 8 )

[node name="GolfDisk" type="Area2D"]
collision_layer = 15
collision_mask = 15
script = ExtResource( 1 )

[node name="temp" type="Polygon2D" parent="."]
position = Vector2( 0, -8 )
color = Color( 0.25098, 0.25098, 0.25098, 1 )
polygon = PoolVector2Array( -32, 8, -16, -8, 16, -8, 32, 8 )

[node name="coll" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="check_tl" type="Area2D" parent="."]
position = Vector2( 0, -8 )
collision_layer = 15
collision_mask = 15

[node name="coll" type="CollisionShape2D" parent="check_tl"]
position = Vector2( -28, -4 )
shape = SubResource( 2 )

[node name="check_tr" type="Area2D" parent="."]
position = Vector2( 0, -8 )
collision_layer = 15
collision_mask = 15

[node name="coll" type="CollisionShape2D" parent="check_tr"]
position = Vector2( 28, -4 )
shape = SubResource( 2 )

[node name="check_bl" type="Area2D" parent="."]
position = Vector2( 0, -8 )
collision_layer = 15
collision_mask = 15

[node name="coll" type="CollisionShape2D" parent="check_bl"]
position = Vector2( -28, 4 )
shape = SubResource( 2 )

[node name="check_br" type="Area2D" parent="."]
position = Vector2( 0, -8 )
collision_layer = 15
collision_mask = 15

[node name="coll" type="CollisionShape2D" parent="check_br"]
position = Vector2( 28, 4 )
shape = SubResource( 2 )

[node name="check_c" type="Area2D" parent="."]
position = Vector2( 0, -8 )
collision_layer = 15
collision_mask = 15

[node name="coll" type="CollisionShape2D" parent="check_c"]
shape = SubResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
